src/objects/Countries_with_State__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Contains the list of countries having state</description>
    <fields>
        <fullName>Country__c</fullName>
        <description>Country ISO Code</description>
        <label>Country</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Code__c</fullName>
        <label>State Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>TextArea</type>
    </fields>
    <label>Countries with State</label>
</CustomObject>